--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.112.2
 fastapi-cli==0.0.5
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -16,6 +17,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+psycopg==3.2.1
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
@@ -25,9 +27,11 @@ PyYAML==6.0.2
 rich==13.8.0
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.34
 starlette==0.38.2
 typer==0.12.5
 typing_extensions==4.12.2
 uvicorn==0.30.6
+uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.0.1
